--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,19 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+input {
+  color: #101828;
+
+  &::placeholder {
+    color: #667085;
+  }
+}
+
+select {
+  color: #101828;
+
+  &::placeholder {
+    color: #667085;
+  }
+}
