--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 :root {
+  height: 100%;
   font-family: "Poppins", sans-serif;
   line-height: 1.5;
   font-weight: 400;
